# Decoh-JQ

./: .gitignore  CMakeLists.txt  README.md  eloss  main.f90  qcd.f90  run.sh  vint.f90
Jet-MD/: jetmd  main.f90  quadpack_double.f90
Multi-Distr/: input.in  main.cc
XP/: Makefile  main.cpp
pQCD/: CMakeLists.txt
pQCD/src/: CT18Pdf.f  const.f90  histloop.f90  kinematics.f90  multi.f90  qcd.f90  sysio.f90  time.f90  vint.f90
src/: bdmps.f90  const.f90  eventcounter.f90  kinematics.f90  multi.f90  optflags.f90  qcd.f90  sysio.f90  time.f90
